{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 127,
  "lineage": "b5defe1b-9c7d-db44-f98e-a712fe3afb14",
  "resources": [
    {
      "module": "module.firewall_rules[\"production-vpc-network\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-health-check",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-04T03:47:55.613-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-health-check",
            "log_config": [],
            "name": "prod-vpc-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "priority": 1000,
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-health-check",
            "source_ranges": [
              "10.1.2.0/24",
              "130.211.0.0/22",
              "34.96.108.234",
              "34.96.93.53",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": "allow-http",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-04T03:47:55.512-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-http",
            "log_config": [],
            "name": "prod-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "priority": 1000,
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prod-vpc-allow-http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": "allow-http-4000",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-04T03:47:55.511-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-http-4000",
            "log_config": [],
            "name": "prod-vpc-allow-http-4000",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "priority": 1000,
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-http-4000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prod-vpc-allow-http-4000"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": "allow-https",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-04T03:47:55.495-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-https",
            "log_config": [],
            "name": "prod-vpc-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "priority": 1000,
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prod-vpc-allow-https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": "allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-04T03:47:55.613-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-ssh",
            "log_config": [],
            "name": "prod-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "priority": 1000,
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/firewalls/prod-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "prod-vpc-allow-ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "module": "module.network_services.module.https_load_balancer[\"bms-prod-lb\"]",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/regions/asia-southeast1/instanceGroups/bms-nrml-ig-asia-southeast1",
                "max_utilization": 0.8
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/regions/asia-southeast1/instanceGroups/bms-prempt-ig-asia-southeast1",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-04T04:39:41.281-08:00",
            "enable_cdn": false,
            "fingerprint": "gBa7FFBmCYE=",
            "health_checks": [
              "projects/terraform-test-project-303715/global/httpHealthChecks/bms-prod-lb-hc"
            ],
            "id": "projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-application-default-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bms-prod-lb-application-default-backend",
            "port_name": "http",
            "project": "terraform-test-project-303715",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-application-default-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.compute.module.instance_templates.google_compute_autoscaler.zonal_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_health_check.regional_ig_health_check",
            "module.compute.module.instance_templates.google_compute_health_check.zonal_ig_health_check",
            "module.compute.module.instance_templates.google_compute_instance_group_manager.zonal_instance_group_manager",
            "module.compute.module.instance_templates.google_compute_instance_template.regional_instance_template",
            "module.compute.module.instance_templates.google_compute_instance_template.zonal_instance_template",
            "module.compute.module.instance_templates.google_compute_region_autoscaler.regional_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_region_instance_group_manager.regional_instance_group_manager",
            "module.iam_service_accounts.google_service_account.service_accounts",
            "module.network_services.module.https_load_balancer.google_compute_http_health_check.default",
            "module.vpc_networks.google_compute_network.vpc_networks",
            "module.vpc_subnets.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.network_services.module.https_load_balancer[\"bms-prod-lb\"]",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "other_backend_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/regions/asia-southeast1/instanceGroups/bms-cron-prempt-ig-asia-southeast1",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-04T04:39:42.666-08:00",
            "enable_cdn": false,
            "fingerprint": "VsKY3WXSVhM=",
            "health_checks": [
              "projects/terraform-test-project-303715/global/httpHealthChecks/bms-prod-lb-hc"
            ],
            "id": "projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-api-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bms-prod-lb-api-backend",
            "port_name": "http",
            "project": "terraform-test-project-303715",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-api-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.compute.module.instance_templates.google_compute_autoscaler.zonal_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_health_check.regional_ig_health_check",
            "module.compute.module.instance_templates.google_compute_health_check.zonal_ig_health_check",
            "module.compute.module.instance_templates.google_compute_instance_group_manager.zonal_instance_group_manager",
            "module.compute.module.instance_templates.google_compute_instance_template.regional_instance_template",
            "module.compute.module.instance_templates.google_compute_instance_template.zonal_instance_template",
            "module.compute.module.instance_templates.google_compute_region_autoscaler.regional_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_region_instance_group_manager.regional_instance_group_manager",
            "module.iam_service_accounts.google_service_account.service_accounts",
            "module.network_services.module.https_load_balancer.google_compute_http_health_check.default",
            "module.vpc_networks.google_compute_network.vpc_networks",
            "module.vpc_subnets.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.network_services.module.https_load_balancer[\"bms-prod-lb\"]",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraform-test-project-303715/global/forwardingRules/bms-prod-lb-http-ft",
            "ip_address": "35.190.120.146",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bms-prod-lb-http-ft",
            "port_range": "80-80",
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/forwardingRules/bms-prod-lb-http-ft",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/targetHttpProxies/bms-prod-lb-target-proxy"
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.compute.module.instance_templates.google_compute_autoscaler.zonal_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_health_check.regional_ig_health_check",
            "module.compute.module.instance_templates.google_compute_health_check.zonal_ig_health_check",
            "module.compute.module.instance_templates.google_compute_instance_group_manager.zonal_instance_group_manager",
            "module.compute.module.instance_templates.google_compute_instance_template.regional_instance_template",
            "module.compute.module.instance_templates.google_compute_instance_template.zonal_instance_template",
            "module.compute.module.instance_templates.google_compute_region_autoscaler.regional_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_region_instance_group_manager.regional_instance_group_manager",
            "module.iam_service_accounts.google_service_account.service_accounts",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.default",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.other_backend_services",
            "module.network_services.module.https_load_balancer.google_compute_http_health_check.default",
            "module.network_services.module.https_load_balancer.google_compute_target_http_proxy.default",
            "module.network_services.module.https_load_balancer.google_compute_url_map.default",
            "module.vpc_networks.google_compute_network.vpc_networks",
            "module.vpc_subnets.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.network_services.module.https_load_balancer[\"bms-prod-lb\"]",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-04T04:40:02.222-08:00",
            "description": "a description",
            "id": "projects/terraform-test-project-303715/global/targetHttpProxies/bms-prod-lb-target-proxy",
            "name": "bms-prod-lb-target-proxy",
            "project": "terraform-test-project-303715",
            "proxy_id": 6987440511325197773,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/targetHttpProxies/bms-prod-lb-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/urlMaps/bms-prod-lb"
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.compute.module.instance_templates.google_compute_autoscaler.zonal_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_health_check.regional_ig_health_check",
            "module.compute.module.instance_templates.google_compute_health_check.zonal_ig_health_check",
            "module.compute.module.instance_templates.google_compute_instance_group_manager.zonal_instance_group_manager",
            "module.compute.module.instance_templates.google_compute_instance_template.regional_instance_template",
            "module.compute.module.instance_templates.google_compute_instance_template.zonal_instance_template",
            "module.compute.module.instance_templates.google_compute_region_autoscaler.regional_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_region_instance_group_manager.regional_instance_group_manager",
            "module.iam_service_accounts.google_service_account.service_accounts",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.default",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.other_backend_services",
            "module.network_services.module.https_load_balancer.google_compute_http_health_check.default",
            "module.network_services.module.https_load_balancer.google_compute_url_map.default",
            "module.vpc_networks.google_compute_network.vpc_networks",
            "module.vpc_subnets.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.network_services.module.https_load_balancer[\"bms-prod-lb\"]",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-04T04:39:57.497-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-application-default-backend",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "GnUTWeiNcd0=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "other-paths"
              }
            ],
            "id": "projects/terraform-test-project-303715/global/urlMaps/bms-prod-lb",
            "map_id": 2387264614409065970,
            "name": "bms-prod-lb",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-application-default-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "other-paths",
                "path_rule": [
                  {
                    "paths": [
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/backendServices/bms-prod-lb-api-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "terraform-test-project-303715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/urlMaps/bms-prod-lb",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.compute.module.instance_templates.google_compute_autoscaler.zonal_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_health_check.regional_ig_health_check",
            "module.compute.module.instance_templates.google_compute_health_check.zonal_ig_health_check",
            "module.compute.module.instance_templates.google_compute_instance_group_manager.zonal_instance_group_manager",
            "module.compute.module.instance_templates.google_compute_instance_template.regional_instance_template",
            "module.compute.module.instance_templates.google_compute_instance_template.zonal_instance_template",
            "module.compute.module.instance_templates.google_compute_region_autoscaler.regional_application_autoscaller",
            "module.compute.module.instance_templates.google_compute_region_instance_group_manager.regional_instance_group_manager",
            "module.iam_service_accounts.google_service_account.service_accounts",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.default",
            "module.network_services.module.https_load_balancer.google_compute_backend_service.other_backend_services",
            "module.network_services.module.https_load_balancer.google_compute_http_health_check.default",
            "module.vpc_networks.google_compute_network.vpc_networks",
            "module.vpc_subnets.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "production-vpc-network",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "mtu": 0,
            "name": "production-vpc-network",
            "project": "terraform-test-project-303715",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network"
          },
          "dependencies": [
            "google_project_service.enabled_services"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets[\"production-vpc-network\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-southeast1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-04T03:47:57.329-08:00",
            "gateway_address": "10.148.0.1",
            "id": "projects/terraform-test-project-303715/regions/asia-southeast1/subnetworks/prod-vpc-asia-southeast1",
            "ip_cidr_range": "10.148.0.0/20",
            "name": "prod-vpc-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/global/networks/production-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-test-project-303715",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-project-303715/regions/asia-southeast1/subnetworks/prod-vpc-asia-southeast1"
          },
          "dependencies": [
            "google_project_service.enabled_services",
            "module.vpc_networks.google_compute_network.vpc_networks"
          ]
        }
      ]
    }
  ]
}